--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
+aiosmtplib==1.1.7
+anyio==3.7.1
 asgiref==3.8.1
 beautifulsoup4==4.12.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==5.1.4
 django-ckeditor==6.7.2
 django-js-asset==3.0.1
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.19.0
+idna==3.10
+messages==0.8.0
 pillow==11.1.0
+rfc3986==1.5.0
+sniffio==1.3.1
 soupsieve==2.6
 sqlparse==0.5.3
 tzdata==2024.2
+validus==0.3.0
